# viz

./: .gitignore  Makefile  README.md  devpi.Makefile  env.example  mypy.ini  pyproject.toml  utils.mk
c/: cpu_hog.c  cpu_hog_load.c  mem_hog.c
doc/: QEMU.README.md  RabbitMq.README.md  icinga2.README.md  systemd.quota.README.md
ops/: Makefile  ansible.prerequisites.sh
ops/ansible/defaults/: main.yml
ops/ansible/inventory/: hosts
ops/ansible/playbooks/: deploy_app_hypervisor.yml  deploy_app_vm.yml  pb.00.postinstall.yml  pb.03.rabbitmq.yml  pb.__.apt-update.yml  pb.__.devpi-server-setup.yml
ops/ansible/tasks/: update-hostname.yml  update-packages.debian.yml  variables.yml
ops/ansible/templates/: dash-server.start.sh.j2  dash.service.j2  devpi.nginx.j2  devpi.service.j2
ops/ansible/vars/: main.yml
ops/attic/: pb.04.rabbitmq.NAT.hypervisor.deprecated.yaml  pb.__.__WIP__.devpi-server-SSL.yaml
ops/scripts/: devpi.sh
tests/: state_machine.py  test_01.py  test_conf.py  test_deployer.py  test_folderRetriever.py
toolchain/: dotenv-toyaml.py  lint-dev.py
viz/: __main__.py  conf.py
viz/broker/: rabbitClient.py
viz/dash/: api.py
viz/logger/: rabbitLogger.py  rabbitLogsConsumer.py
viz/service/: __main__.py  daemon.py  logw.py
viz/sys/: deployer.py  utils.py  vm.py
